fix vertical align, desc text, remove padding in cost block, add fixed height for block

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -147,11 +147,12 @@ footer{display:block; width:100%; height:auto;}
 .pricing-template{}
 .pricing-template .centred_data{padding-bottom:60px; padding-bottom:4rem; padding-bottom:5vw;}
 .pricing-template .plans{font-size:0px;}
-.pricing-template .plans .blocks{display:inline-block; width:25%; max-width:25%; width:calc(25% - 1px); max-width:calc(25% - 1px); border-left:1px solid #f1f3f7;}
+.pricing-template .plans .blocks{display:inline-block; width:25%; max-width:25%; width:calc(25% - 1px); max-width:calc(25% - 1px); border-left:1px solid #f1f3f7; vertical-align:top;}
 .pricing-template .plans .blocks:first-of-type{width:25%; max-width:25%; border-left:0px solid transparent;}
-.pricing-template .plans .blocks .inner_top{display:block; width:100%; padding: 50px 0px; padding: 3rem 0px; padding: 3vw 0px;  border-bottom:1px solid #f1f3f7;}
+.pricing-template .plans .blocks .inner_top{display:block; width:100%; padding: 50px 0px; padding: 3rem 0px; padding: 3vw 0px;  border-bottom:1px solid #f1f3f7; height: 120px; height: 10.5rem; height:11.5vw;}
 .pricing-template .plans .blocks .inner_top .t_hm{color: #272d37; margin-top:0px;}
-.pricing-template .plans .blocks .inner_top .t_h2{color: #272d37; padding-bottom:0px; font-weight: 600;}
+.pricing-template .plans .blocks .inner_top .t_h0{padding-bottom:0px;}
+.pricing-template .plans .blocks .inner_top .t_h2{color: #377eea; padding-bottom:0px; font-weight: 600;}
 .pricing-template .plans .blocks .inner_middle{display:table; width:100%; height:300px; height:22rem; height: 22vw; padding-top:50px; padding-top: 3rem; padding-top:3vw; }
 .pricing-template .plans .blocks .inner_middle .vertical_aligner{vertical-align: top; }
 .pricing-template .plans .blocks .inner_middle .descs{display:block; width:80%; margin-left:10%; margin-right:10%; margin-bottom:25px; margin-bottom:1.25rem; margin-bottom:1.25vw; border-bottom:1px solid #f1f3f7;}
